methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:27: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
     setCouleurBrosse(); forward; left(); 
                     ^